# poc-face-detector

./: .gitignore  README.md  face-detector.py  pyproject.toml
